src/main/metadata/objects/Rental_OverDue__c.object
<CustomObject>
    <fields>
        <fullName>Composite_RentalOverDue_Identifier__c</fullName>
        <formula>FS_Contract__r.Borrower__r.BPID__c+"-"+ FS_Contract__r.Contract_ID__c+"-"+ Rental_ID__c+"-"+ Overdue_Seq_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite RentalOverDue Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>Rental OverDues</relationshipLabel>
        <relationshipName>Rental_OverDues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From_Overdue_Date__c</fullName>
        <label>From Overdue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Outstanding__c</fullName>
        <label>Gross Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Outstanding__c</fullName>
        <label>Interest Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Overdue_Amount__c</fullName>
        <label>Net Overdue Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_DD__c</fullName>
        <label>Overdue DD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Rate__c</fullName>
        <label>Overdue Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Seq_ID__c</fullName>
        <label>Overdue Seq ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Type__c</fullName>
        <label>Overdue Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Outstanding__c</fullName>
        <label>Principal Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receivable_Amount__c</fullName>
        <label>Receivable Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receivable_Rental_Overdue_Interest__c</fullName>
        <label>Receivable Rental Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_ID__c</fullName>
        <label>Rental ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Overdue_Amount__c</fullName>
        <label>Rental Overdue Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Overdue_Date__c</fullName>
        <label>To Overdue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding__c</fullName>
        <label>Total Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VATGST_on_Rentals__c</fullName>
        <label>VAT/GST on Rentals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rental OverDue</label>
    <nameField>
        <displayFormat>RO-{000000}</displayFormat>
        <label>Rental OverDue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental OverDues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>